# daavfx_chartingfx

./: .gitignore  Cargo.toml  IMPORT_GUIDE.md  README.md  index.html  package-lock.json  package.json
sample_data/: EURUSD_D1_standard.csv  XAUUSD_D1_datetime.csv  sample.json
src/: App.tsx  commands.rs  index.css  main.rs  metadata.json  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  data.rs  engine.rs  main.rs  monte_carlo.rs  replay.rs  reporting.rs  strategy.rs
src/components/: Chart.tsx  IndicatorOverlay.tsx  IndicatorPanel.tsx  JournalModal.tsx  ReplayControls.tsx  SaveModal.tsx  Sidebar.tsx  Toast.tsx  TradeMarkers.tsx  VaultModal.tsx
src/services/: backtestService.ts  dataService.ts  indicatorService.ts  replayService.ts
src/tests/: benchmark.ts  performance.test.ts
src/types/: indicators.ts
src/utils/: dataGenerator.ts
src/workers/: indicator.worker.ts
