[package]
name = "charting-daavfx"
version = "0.1.0"
description = "Charting FX - Legendary Market Replay & Analysis Tool"
authors = ["DAAVILEFX <team@daavilefx.com>"]
edition = "2021"
rust-version = "1.70"

[workspace]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
# Core Engine - Shared library powering both apps
daavfx-core = { path = "../../daavfx-core" }

# Tauri Framework
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-dialog = "2.0.1"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time & Date
chrono = { version = "0.4", features = ["serde"] }

# Data Processing
csv = "1.3"
rust_decimal = { version = "1.33", features = ["serde"] }

# Utilities
rand = "0.8"
dirs = "5.0"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.daavfx-core]
opt-level = 3
